@@ -3,5 +3,5 @@ glibc-branch := fedora
 glibc-base := HEAD
 DIST_BRANCH := devel
 COLLECTION := dist-fc7
-fedora-sync-date := 2007-01-17 08:57 UTC
-fedora-sync-tag := fedora-glibc-20070117T0857
+fedora-sync-date := 2007-01-17 10:43 UTC
+fedora-sync-tag := fedora-glibc-20070117T1043
